--- a/tailwind-components/index.html
+++ b/tailwind-components/index.html
@@ -39,33 +39,25 @@
         </button>
     </div>
 
-    <div class="lg:h-24 lg:w-auto w-full px-48 lg:flex font-extrabold text-lg  items-center gap-10 mb-20 sm:hidden">
-        <div class="flex items-center font-extrabold hover:bg-gray-200 hover:text-blue-500 p-3">
-            <div class="">
-                <p class="mr-12">Kampus Mengajar</p>
-            </div>
+    <div class="lg:h-24 lg:w-auto w-full px-48 lg:flex font-extrabold text-lg  items-center gap-5 mb-20 sm:hidden">
+        <div class="flex items-center justify-between font-extrabold hover:bg-gray-200 hover:text-blue-500 p-3">
+            <p>Kampus Mengajar</p>
             <svg viewBox="0 0 24 24" height="24" fill="" stroke=""><path d="M16.6,8.6L12,13.2L7.4,8.6L6,10l6,6l6-6L16.6,8.6z"></path></svg>
         </div>
-        <div class="flex items-center w-60 hover:bg-gray-200 hover:text-blue-500 p-3">
-            <p class="mr-12">Magang MSIB</p>
+        <div class="flex items-center justify-between hover:bg-gray-200 hover:text-blue-500 p-3">
+            <p class="w-[11rem]">Magang MSIB</p>
             <svg viewBox="0 0 24 24" height="24" fill="" stroke=""><path d="M16.6,8.6L12,13.2L7.4,8.6L6,10l6,6l6-6L16.6,8.6z"></path></svg>
         </div>
-        <div class="flex items-center w-96 font-extrabold hover:bg-gray-200 hover:text-blue-500 p-3">
-            <div class="">
-                <p class="mr-12">Studi Independen Bersertifikat</p>
-            </div>
+        <div class="flex items-center justify-between font-extrabold hover:bg-gray-200 hover:text-blue-500 p-3">
+            <p>Studi Independen Bersertifikat</p>
             <svg viewBox="0 0 24 24" height="24" fill="" stroke=""><path d="M16.6,8.6L12,13.2L7.4,8.6L6,10l6,6l6-6L16.6,8.6z"></path></svg>
         </div>
-        <div class="flex items-center w-[27rem] font-extrabold hover:bg-gray-200 hover:text-blue-500 p-3">
-            <div class="">
-                <p class="mr-12">Pertukaran Mahasiswa Merdeka</p>
-            </div>
+        <div class="flex items-center justify-between font-extrabold hover:bg-gray-200 hover:text-blue-500 p-3">
+            <p>Pertukaran Mahasiswa Merdeka</p>
             <svg viewBox="0 0 24 24" height="24" fill="" stroke=""><path d="M16.6,8.6L12,13.2L7.4,8.6L6,10l6,6l6-6L16.6,8.6z"></path></svg>
         </div>
-        <div class="flex items-center w-96 font-extrabold hover:bg-gray-200 hover:text-blue-500 p-3">
-            <div class="">
-                <p class="mr-12">Program dan Kegiatan Lainnya</p>
-            </div>
+        <div class="flex items-center justify-between font-extrabold hover:bg-gray-200 hover:text-blue-500 p-3">
+            <p>Program dan Kegiatan Lainnya</p>
         </div>
     </div>
 
